name:		project-euler
version:	1.0
synopsis:	Project Euler's problems solved using Haskell
author:		Fabio Mancinelli
maintainer:	fabio@mancinelli.me
cabal-version:	>= 1.2
build-type: 	Simple

library
 build-depends:	base >= 2.0

executable problem1
 main-is:	Problem1.hs

executable problem2
 main-is:	Problem2.hs

executable problem3
 main-is:	Problem3.hs

executable problem4
 main-is:	Problem4.hs

executable problem5
 main-is:	Problem5.hs

executable problem6
 main-is:	Problem6.hs
