name:		project-euler
version:	1.0
synopsis:	Project Euler's problems solved using Haskell
author:		Fabio Mancinelli
maintainer:	fabio@mancinelli.me
cabal-version:	>= 1.2
build-type: 	Simple

library
 build-depends:	base >= 2.0

executable problem001
 main-is:	Problem001.hs

executable problem002
 main-is:	Problem002.hs

executable problem003
 main-is:	Problem003.hs

executable problem004
 main-is:	Problem004.hs

executable problem005
 main-is:	Problem005.hs

executable problem006
 main-is:	Problem006.hs

executable problem007
 main-is:	Problem007.hs

executable problem008
 main-is:	Problem008.hs

executable problem009
 main-is:	Problem009.hs

executable problem010
 main-is:	Problem010.hs

executable problem011
 main-is:	Problem011.hs

executable problem012
 main-is:	Problem012.hs
 
executable problem013
 main-is:	Problem013.hs

executable problem014
 main-is:	Problem014.hs

executable problem016
 main-is:	Problem016.hs

executable problem020
 main-is:	Problem021.hs

executable problem021
 main-is:	Problem021.hs

executable problem104
 main-is:	Problem104.hs
